<resources>
    <string name="app_name">BStore</string>

    <!--Intro String-->
    <string name="slide_one_top_text">Welcome to BStore</string>
    <string name="slide_one_down_text">Amazing Apps Store with Cool Features</string>
    <string name="slide_two_top_text">Search Apps</string>
    <string name="slide_two_down_text">Download applications from various kinds of developers</string>
    <string name="slide_three_top_text">Verified Apps</string>
    <string name="slide_three_down_text">Every developer has been verified so that every application provided is maintained</string>
    <string name="slide_four_top_text">Provide Update</string>
    <string name="slide_four_down_text">Don\'t forget to update your apps from verified developer frequently</string>
    <string name="slide_five_top_text">Secure</string>
    <string name="slide_five_down_text">Every application is guaranteed safety with Bprotect</string>
    <string name="slide_final_top_text">What are you waiting for?</string>
    <string name="slide_final_down_text">Tap Done and start using Bstore</string>

    <!--Bottom Navigator Menu Text-->
    <string name="bottom_nav_txt_01">Home</string>
    <string name="bottom_nav_txt_02">Rankings</string>
    <string name="bottom_nav_txt_03">Apps</string>
    <string name="bottom_nav_txt_04">About</string>
    <string name="bottom_nav_txt_05">Settings</string>

    <!--Default Name for Recycle View Display Text-->
    <string name="temp_app_name">App name here…</string>
    <string name="temp_app_size">0.0 MB</string>
    <string name="temp_dev_name">Developer Name</string>
    <string name="temp_app_category">Category</string>
    <string name="temp_app_ratting">5.0</string>
    <string name="hello_blank_fragment">Hello blank</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="top_10_apps">Top 10 Apps</string>
    <string name="entertainment">Entertainment</string>
    <string name="game">Game</string>
    <string name="patricia_fiona">Patricia Fiona</string>
    <string name="android_developer">Android Developer</string>
    <string name="myEmail">patriciafiona3@gmail.com</string>
    <string name="mobile">Mobile</string>
    <string name="install">Install</string>
    <string name="about_this_game">About this game</string>
    <string name="ratings_and_contact">Ratings and Developer Contact</string>
    <string name="temp_appDesc">App description here...</string>
    <string name="show_less">Show Less</string>
    <string name="temp_rated_app">Rated for 12+</string>
    <string name="detail_developer_web">Website</string>
    <string name="temp_developer_web">www.google.com</string>
    <string name="detail_developer_email">Email</string>
    <string name="temp_developer_email">developer.android@gmail.com</string>
    <string name="detail_developer_address">Address</string>
    <string name="temp_developer_address">Jl. Mawar No.32</string>
    <string name="detail_developer_phone">Phone</string>
    <string name="temp_developer_phone">000-0000-0000</string>
    <string name="exit_app">Exit Application?</string>
    <string name="title_activity_image_viewer">ImageViewerActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="banner_image">Banner Image</string>
</resources>