<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_item_row_disp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        tools:src="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/img_item_row_disp"
        android:layout_toRightOf="@id/img_item_row_disp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/appName_item_row_disp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/temp_app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/devName_item_row_disp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/temp_dev_name"/>

            <TextView
                android:id="@+id/appCategory_item_row_disp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                android:text="@string/temp_app_category"
                android:ellipsize="end"
                android:maxLines="1"
                android:drawablePadding="2dp"
                app:drawableLeftCompat="@drawable/ic_dot_10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/appRatting_item_row_disp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_app_ratting"
                app:drawableRightCompat="@drawable/ic_baseline_star_15"
                android:drawablePadding="2dp"/>

            <TextView
                android:id="@+id/appSize_item_row_disp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                tools:text="@string/temp_app_size" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>