<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/home_banner_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/recommend_app_01"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/transparant_darker_gradient"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/homeBannerAppImg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintWidth_percent="0.2"
                    android:src="@color/grey_700"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/homeBannerAppName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintWidth_percent="0.7"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/temp_app_name"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/homeBannerDevName"
                    app:layout_constraintStart_toEndOf="@+id/homeBannerAppImg" />

                <TextView
                    android:id="@+id/homeBannerDevName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintWidth_percent="0.25"
                    android:text="@string/temp_dev_name"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    app:layout_constraintBottom_toTopOf="@+id/homeBannerAppRating"
                    app:layout_constraintStart_toEndOf="@+id/homeBannerAppImg" />

                <TextView
                    android:id="@+id/homeBannerAppCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintWidth_percent="0.3"
                    android:drawablePadding="2dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/temp_app_category"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:drawableLeftCompat="@drawable/ic_dot_10"
                    app:layout_constraintBottom_toBottomOf="@+id/homeBannerDevName"
                    app:layout_constraintStart_toEndOf="@+id/homeBannerDevName" />

                <TextView
                    android:id="@+id/homeBannerAppRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:drawablePadding="2dp"
                    android:text="@string/temp_app_ratting"
                    android:textColor="@color/white"
                    app:drawableRightCompat="@drawable/ic_baseline_star_white_15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/homeBannerAppImg" />

                <TextView
                    android:id="@+id/homeBannerAppSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/temp_app_size"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/homeBannerAppRating" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>