<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DetailApp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/detail_backgroundGradient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@color/grey_600" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_bg_dark" />
            </FrameLayout>

            <ImageView
                android:id="@+id/detail_appLogo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="76dp"
                android:src="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_appName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.7"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/temp_app_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/detail_appLogo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_devName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintWidth_percent="0.7"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/temp_dev_name"
                android:textColor="@color/blue_100"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/detail_appLogo"
                app:layout_constraintTop_toBottomOf="@+id/detail_appName" />

            <TextView
                android:id="@+id/detail_appCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintWidth_percent="0.7"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/temp_app_category"
                android:textColor="@color/grey_100"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/detail_appLogo"
                app:layout_constraintTop_toBottomOf="@+id/detail_devName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="20dp"
                android:paddingHorizontal="30dp"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/install"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/detail_appImgSlider"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">
                    </androidx.viewpager2.widget.ViewPager2>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>